test/error/parse/ExpectOf.mod
MODULE ExpectOf;
TYPE T = ARRAY 1 INTEGER;
END ExpectOf.
